circle inside rectangle

--- a/index.html
+++ b/index.html
@@ -1,57 +1,13 @@
-<html lang="" xmlns="http://www.w3.org/1999/html">
+<html >
 <head>
-    <style>
-        h1{text-align: center;}
-        footer{background: cadetblue}
-    </style>
-    <title lang="fr" > Lakm&#233; Cosmetic Products</title>
+    <title >rectangle kulla circle </title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
-<div lang="fr" ><h1><span style="background: deeppink"> Welcome to <em>lakm&#233;</em> cosmetics</span></h1></div>
-<marquee behavior="scroll" direction="left" scrollamount="40" bgcolor="pink">
-<img src="lip_color_duo_Home_page_banner_Desktop_2000x.webp" alt="lip_color_duo" style="width:100%" >
-    <img src="Lakme_9to5_Vit_C_facial_foam_HomePage_banner_Desktop_2000x.webp" alt="Lakme_9to5_Vit_C_facial_foam" style="width:100%" >
-</marquee>
-<div>
-    <figure>
-    <img src="nile1_300x.webp" alt="nile1">
-        <a href="https://www.lakmeindia.com/products/lakme-9to5-primer-matte-liquid-lip-color"><figcaption><b><h3 style="font-family: Serif">Nile liquid lipstick</h3></b></figcaption></a>
-        <img src="LakmeAbsoluteMattrealSkinNaturalMousseGoldenMedium_300x.webp" alt="LakmeAbsoluteMattrealSkinNaturalMousseGoldenMedium">
-        <a href="https://www.lakmeindia.com/products/lakme-absolute-mattreal-skin-natural-mousse"><figcaption><b><h3 style="font-family: Serif">LakmeAbsoluteMattrealSkinNaturalMousseGolden</h3></b></figcaption></a>
-        <img src="Cherry-Chic-removebg-preview_300x.webp" alt="Cherry-Chic-removebg">
-        <a href="https://www.lakmeindia.com/products/lakme-9to5-primer-matte-lipstick?variant=39258929102983"><figcaption><b><h3 style="font-family: Serif">Cherry-Chic-removebg</h3></b></figcaption></a>
-        <img src="27507_S2-8901030875687_300x.webp" alt="lakmae vit c serum">
-        <a href="https://www.lakmeindia.com/products/lakme-vit-c-facial-foam-150ml"><figcaption><b><h3 style="font-family: Serif">lakmae vit c serum</h3></b></figcaption></a>
-    </figure>
-
-</div>
-<iframe width="750" height="500" src="https://www.youtube.com/embed/xw_h8X_8O_k?rel=0&autoplay=1"  allowfullscreen></iframe>
-<div>
-    <h3><i><b>lakme products</b></i></h3>
-   <ul>
-       <li><strong>lipstics</strong></li>
-       <ol><li>red matte lipstick</li>
-           <li>red liquid lipstick</li>
-           <li>red lipgloss</li></ol>
-       <li>mascaras</li>
-       <li>foundations</li>
-   </ul>
-</div>
-<div>
-    <h2>Register to get free products</h2>
-   <form>
-       <label>Name  </label><input type="text"><br><br>
-       <label>Email </label><input type="email"><br><br>
-       <label>mobile </label><input type="number"><br><br>
-       <label>Gender :  Male</label><input type="radio" name="gender"> <label>Female</label><input type="radio" name="gender"><br><br>
-       <label>Interested : Skincare</label><input type="checkbox" name="Interest"> <label>Makeup</label><input type="checkbox" name="Interest"><br><br>
-       <label>Favourite lipshade</label><input type="color"><br><br>
-       <label>Date of Birth</label><input type="date"><br><br>
-      <input TYPE="submit"><br><br>
-   </form>
+<body bgcolor="#5f9ea0">
+<div class="flex-rect">
+    <div class="rect" id="inline-rect">
+        <div class="circle"></div>
+    </div>
 </div>
 </body>
-<footer>
-<section><p style="font-family: 'Times New Roman'"  >Lakmé is the country's first cosmetic brand to introduce makeup to Indian women and takes pride in being the Indian beauty expert for over 65 years.<br> It is a complete beauty brand spanning colour cosmetics & skin care and extends to beauty services through the network of Lakmé Salons.</p></section>
-</footer>
 </html>
