--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body bgcolor="#5f9ea0">
-<div class="flex-rect">
-    <div class="rect" id="inline-rect">
+<div>
+<div class="flex-rect" >
+    <div class="rect" >
         <div class="circle"></div>
     </div>
+</div>
 </div>
 </body>
 </html>
