final - circle in rect

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body bgcolor="#5f9ea0">
-<div>
+<div class="flex-full">
 <div class="flex-rect" >
+    <div class="rect" >
+        <div class="circle"></div>
+    </div>
+</div>
+<div class="flex-corner" >
     <div class="rect" >
         <div class="circle"></div>
     </div>
